Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
Description
reactos-bootcd-0.4.16-dev-254-g30b4024-x86-gcc-lin-dbg
- Open Wordpad
- Do NOT enter any content
- Edit>Advanced>Complete Text
- Shows a first "empty" dialog (expected, as no content)
then shows a second dialog with some garbage- Guilty code related to EM_GETTEXTRANGE management: https://git.reactos.org/?p=reactos.git;a=blob;f=base/applications/wordpad/wordpad.c;hb=6aa11ac494ec2cc127196f17247fbb3fb973b86a#l2296
Nothing in log
Wine 10.5 is affected in the same way: https://bugs.winehq.org/show_bug.cgi?id=58144
