[WORDPAD] Fix garbage in dialog

CORE-19868